# rtk-PC

./: .gitignore  CMakeLists.txt
include/: AnimationPage.h  OpenGLWidget.h  PlotController.h  USBReader.h  USBTest.h  guisettings.h  mainwindow.h  renderersettings.h  renderersettingspage.h  sessionsettingspage.h  settingsdialog.h  settingsmanager.h  themesettingspage.h
resources/: resources.qrc
resources/shaders/: shader.frag  shader.geom  shader.vert
src/: AnimationPage.cpp  OpenGLWidget.cpp  PlotController.cpp  USBReader.cpp  USBTest.cpp  guisettings.cpp  main.cpp  mainwindow.cpp  renderersettings.cpp  renderersettingspage.cpp  sessionsettingspage.cpp  settingsdialog.cpp  settingsmanager.cpp  themesettingspage.cpp
styles/: ManjaroMix.qss  MaterialDark.qss  resources.qrc
